tests/snapshots/cli_snapshots__placeholder_research.snap
---
source: tests/cli_snapshots.rs
---
status: 69
stdout:
stderr:
ossus: command 'research' is planned but not implemented in the repository scaffold
see docs/implementation/06-waves/WAVE_INDEX.md

